# tb-personal-stock-guru

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  launch_dashboard.bat  launch_dashboard.ps1  launch_dashboard_silent.vbs  main.py  pyproject.toml  run.ps1  stop_dashboard.bat  stop_dashboard_silent.vbs
agents/: analyst.py  bear.py  bull.py  debate.py  graph.py  news_hunter.py  portfolio_manager.py  test_graph.py
evals/: run_evals.py
memory/: __init__.py  store.py
scripts/: create_shortcut.ps1  test_notion_mcp.py
state/: __init__.py  research_state.py
tests/: test_archive_record.py  test_checkpoint_serde.py  test_filings.py  test_market_data.py  test_memory.py  test_news.py  test_web.py
tools/: __init__.py  filings.py  market_data.py  mcp_loader.py  news.py  profile_cli.py  web.py
ui/: app.py  components.py  streaming.py
