[project]
name = "stock-guru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sec-edgar-downloader>=5.1.0",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "trafilatura>=2.0.0",
    "yfinance>=1.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-mcp-adapters>=0.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
